tune: emoji logic for warm replies

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     }
 
     #paywall-note {
-      padding: 6px 20px 8px;
+      p.adding: 6px 20px 8px;
       font-size: 11px;
       color: var(--text-softer);
       border-top: 1px solid var(--border-subtle);
